Fix element alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.hero-video {
-  width: 30% !important;
-}
